--- a/css/style-mi.css
+++ b/css/style-mi.css
@@ -31,8 +31,8 @@ marquee {
   marquee-play-count: 5;
   color:#28282a;
 }
-.ads-container{
-  /* width: 100%; */
+/* .ads-container{
+
  min-height: 120px;
- min-width: 120px;
-}
+ min-width: 100%;
+} */
