--- a/css/style.css
+++ b/css/style.css
@@ -81,11 +81,11 @@ body {
   border-radius: 0.65rem !important;
   position: relative;
 }
-/* .ads-container{
+.ads-container{
  
  min-height: 120px;
  min-width: 120px;
-} */
+}
 
 
 .question-container2{
