--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   .ads-container{
  
     min-height: 220px;
@@ -38,7 +38,7 @@
     min-height: 220px;
     min-width: 1390px;
    }
-  }
+  } */
 
     
 
