--- a/css/style.css
+++ b/css/style.css
@@ -123,11 +123,6 @@ body {
   border-radius: 0.65rem !important;
   position: relative;
 }
-.ads-container{
- 
- min-height: 120px;
- min-width: 120px;
-}
 
 
 .question-container2{
@@ -169,8 +164,8 @@ body {
     height: 100%; 
     min-height: 400px;
     /* background-color:#333; */
-    position: -webkit-sticky;
-    position: sticky;
+    /* position: -webkit-sticky; */
+    /* position: sticky; */
     color:#FFF;
     overflow: hidden;
     top: 12%;
